# haltseal

./: CONTRIBUTING.md  HALTSEAL_HIDDEN_FILES_MANUAL.md  HALTSEAL_HIDDEN_FILES_RESTORE.py  HALTSEAL_HIDDEN_FILES_RESTORE_MANIFEST.json  HALTSEAL_HIDDEN_FILES_SHA256SUMS.txt  LICENSE-EVALUATION.md  MANIFEST.json  MANIFEST.sha256.json  Makefile  NOTICE.md  PATENT-NOTICE.md  QA_RESULTS.json  QUICKSTART.md  README.md  README_FIRST.md  SECURITY.md  SECURITY_AND_LIMITATIONS.md  SOURCE_TREE.txt  VERSION  pyproject.toml  requirements.txt  verify_manifest.py
attestations/: privacy_preserving_transparency_report.json  synthetic_evaluation_attestation.json
docs/: API_SURFACE.md  BOUNDARY_MAPPER.md  COMMIT_PLAN.md  DEMO_SCRIPT_3_MIN.md  DILIGENCE_PACKET.md  GATEWAY_PROOF_PACK.md  GITHUB_RELEASE_BODY.md  GITHUB_UPLOAD_CHECKLIST.md  HARDENING_NOTES_v0_3_0.md  IETF_AND_STANDARDS_BOUNDARY.md  IP_PUBLIC_ALIGNMENT.md  LICENSING_HANDOFF.md  ORPRG_CROSSWALK.md  PATENT_AND_IP_POSTURE.md  PROOF_RECEIPT.md  PUBLIC_BOUNDARY.md  QA_REPORT_v0_3_0_PUBLIC_EVAL.md  RELEASE_DECISION_RECORD_v0_3_0.md  RELEASE_HYGIENE.md  RELEASE_READINESS_v0_3_0.md  REPRODUCIBILITY.md  REVIEWER_GUIDE.md  RUNTIME_ACTION_REVIEW.md  THREAT_MODEL_PUBLIC_EVAL.md  VECTOR_GUIDE.md  WEBSITE_CTA_COPY.md
examples/: README.md  h01_allow_current_permit_exact_action.json  h02_hold_stale_signed_head.json  h03_deny_expired_permit.json  h04_deny_action_digest_mismatch.json  h05_deny_replay_nonce_monotonic.json  h06_deny_audience_mismatch.json  h07_deny_revoked_permit.json  h08_hold_missing_continuity_proof.json  (+26 more)
tools/: zip_audit.py  (+10 more)
(+36 files in other folders)
